--- a/templates/base2.html
+++ b/templates/base2.html
@@ -35,6 +35,13 @@
 
             <div id="sideNav" href=""><i class="fa fa-caret-right"></i></div>
         </div>
+        <!-- add -->
+        <ul>
+            <li><p style="display:block; width: 70px; float:right; color: #F09B22;  " > </p></li>
+            <li><a href="/logout/" style="display:block; width: 70px; float:right; color: #F09B22;  " >退出登录</a></li>
+        </ul>
+
+
     </nav>
     <!--/. NAV TOP  -->
     <nav class="navbar-default navbar-side" role="navigation">
