--- a/templates/general/index_new.html
+++ b/templates/general/index_new.html
@@ -26,7 +26,6 @@
                                     <th> 测试人员</th>
                                     <th> 任务添加时间</th>
                                     <th> 测试引擎</th>
-                                    <th> 测试进度</th>
                                     <th> 测试结果</th>
                                 </tr>
                                 </thead>
@@ -37,7 +36,6 @@
                                     <td>罗吕根</td>
                                     <td>2017-12-14</td>
                                     <td>代码安全检测, 数据安全检测</td>
-                                    <td> 未完成</td>
                                     <td> --</td>
                                 </tr>
                                 <tr>
@@ -46,7 +44,6 @@
                                     <td>罗吕根2</td>
                                     <td>2017-12-14</td>
                                     <td>代码安全检测, 数据安全检测</td>
-                                    <td> 已完成</td>
                                     <td> <a href="report.html">查看</a></td>
                                 </tr>
                                 </tbody>
@@ -169,12 +166,11 @@
                     no = count + 1;
                     i = data.tasks[count]
                     $(".tasks").find("tbody").append('<tr><th scope="row">' + no + '</th><td>' + i.name + '</td><td>' + i.member + '</td><td>' +
-                     i.TS + '</td><td>' + getEnginesName(i.engines) + '</td><td>' + showProgress(i) + '</td><td>' + i.addr + '</td></tr>');
+                     i.TS + '</td><td>' + getEnginesName(i.engines) + '</td><td>' + i.addr + '</td></tr>');
                }
         });
     }
 
     refreshTasks();
-
   </script>
   {%endblock%}
