modified:   MobSF/context.py 	modified:   templates/general/index_new.html 	modified:   templates/general/tasks.html

--- a/templates/general/index_new.html
+++ b/templates/general/index_new.html
@@ -135,17 +135,21 @@
   <script>
       $("#main-menu").find("li").find("a").eq(0).addClass("active-menu");
 
-      function getEnginesName(names) {
-        engines = ["静态分析","敏感数据硬编码","数据库敏感数据泄露","配置数据篡改检测","资源文件篡改检测","数据库文件篡改检测",
-        "通信数据明文泄露检测","加密证书锁定安全漏洞分析","会话重放攻击检测","会话超时攻击检测","会话劫持安全漏洞分析","短信DOS检测",
-        "用户注册与登陆安全","设备配网安全检测","手机和云认证及通信加密检测","手机和设备认证及通信加密检测",
-        "设备和云认证及通信加密检测","固件升级安全检测","固件存储安全检测"];
+    function getEnginesName(names) {
+        //engines = ["静态分析","敏感数据硬编码","数据库敏感数据泄露","配置数据篡改检测","资源文件篡改检测","数据库文件篡改检测",
+        //"通信数据明文泄露检测","加密证书锁定安全漏洞分析","会话重放攻击检测","会话超时攻击检测","会话劫持安全漏洞分析","短信DOS检测",
+        //"用户注册与登陆安全","设备配网安全检测","手机和云认证及通信加密检测","手机和设备认证及通信加密检测",
+        //"设备和云认证及通信加密检测","固件升级安全检测","固件存储安全检测"];
+        engines = ["静态分析", "人工分析"];
         es = names.split(",");
         result = ""
-        for(var i = 0; i < es.length; i++) {
-            result += "," + engines[es[i]];
+        if(es[0] == 0) {
+            result += "静态分析";
         }
-        return result.slice(1);
+        if(es.length > 1) {
+            result += ",人工分析";
+        }
+        return result;
     }
 
     function showProgress(i) {
