--- a/templates/general/tasks.html
+++ b/templates/general/tasks.html
@@ -64,20 +64,18 @@
                                                 </optgroup>
                                                 <optgroup label="通信安全检测">
                                                     <option value="6" data-subtext="人工分析">通信数据明文泄露检测</option>
-                                                    <option value="7" data-subtext="人工分析">加密证书锁定安全漏洞分析</option>
-                                                    <option value="8" data-subtext="人工分析">会话重放攻击检测</option>
-                                                    <option value="9" data-subtext="人工分析">会话超时攻击检测</option>
-                                                    <option value="10" data-subtext="人工分析">会话劫持安全漏洞分析</option>
-                                                    <option value="11" data-subtext="人工分析">短信DOS检测</option>
+                                                    <option value="7" data-subtext="人工分析">加密配置安全检测</option>
+                                                    <option value="8" data-subtext="人工分析">加密证书锁定安全漏洞分析</option>
+                                                    <option value="9" data-subtext="人工分析">会话重放攻击检测</option>
+                                                    <option value="10" data-subtext="人工分析">会话超时攻击检测</option>
+                                                    <option value="11" data-subtext="人工分析">会话劫持安全漏洞分析</option>
+                                                    <option value="12" data-subtext="人工分析">短信DOS检测</option>
                                                 </optgroup>
                                                 <optgroup label="业务逻辑安全">
-                                                    <option value="12" data-subtext="人工分析">用户注册与登陆安全</option>
                                                     <option value="13" data-subtext="人工分析">设备配网安全检测</option>
-                                                    <option value="14" data-subtext="人工分析">手机和云认证及通信加密检测</option>
-                                                    <option value="15" data-subtext="人工分析">手机和设备认证及通信加密检测</option>
+                                                    <option value="14" data-subtext="人工分析">用户注册与登陆安全</option>
+                                                    <option value="15" data-subtext="人工分析">手机和云认证及通信加密检测</option>
                                                     <option value="16" data-subtext="人工分析">设备和云认证及通信加密检测</option>
-                                                    <option value="17" data-subtext="人工分析">固件升级安全检测</option>
-                                                    <option value="18" data-subtext="人工分析">固件存储安全检测</option>
                                                 </optgroup>
                                             </select>
                                         </div>
